--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	</tr>
 	
 	<tr>
-		<td><b><font size="5" face="verdana">Dauj</font></b></td>
-		<td><img src="http://play.pokemonshowdown.com/sprites/xyani/alakazam-mega.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/mew.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/blissey.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/terrakion.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/porygon2.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/drapion.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/malamar.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/typhlosion.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/articuno.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/leavanny.gif">
+		<td><b><font size="5" face="verdana">Nico</font></b></td>
+		<td><img src="http://play.pokemonshowdown.com/sprites/xyani/alakazam-mega.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/mew.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/suicune.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/terrakion.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/porygon2.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/drapion.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/malamar.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/typhlosion.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/articuno.gif"><img src="http://play.pokemonshowdown.com/sprites/xyani/leavanny.gif">
 	</tr>
 </table>
